--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="hero">
 
             <div class="hero-text-box">
-                <h1> A healthy meal delivered to your door,
+                <h1 class="heading-primary"> A healthy meal delivered to your door,
                     every single day
                 </h1>
                 <p class="hero-description">
@@ -24,11 +24,12 @@
                     personal tastes and nutritional needs.
                     We have delivered 250,000+ meals last year!
                 </p>
-                <a href="#" class="btn">Start eating well</a>
-                <a href="#" class="btn">Learn more &rarr;</a>
+                <a href="#" class="btn btn--full">Start eating well</a>
+                <a href="#" class="btn btn--outline">Learn more &rarr;</a>
             </div>
             <div class="hero-img-box">
-                <img src="img/hero.png" class="hero-img" alt="Woman enjoying food" />
+                <img src="img/hero.png" class="hero-img"
+                    alt="Woman enjoying food, meals in storage container and food bowls on a table" />
             </div>
         </div>
     </section>
