--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Omnifood</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css" />
+    <title>Omnifood</title>
 </head>
 
 <body>
@@ -24,7 +28,7 @@
                     personal tastes and nutritional needs.
                     We have delivered 250,000+ meals last year!
                 </p>
-                <a href="#" class="btn btn--full">Start eating well</a>
+                <a href="#" class="btn btn--full margin-right-sm ">Start eating well</a>
                 <a href="#" class="btn btn--outline">Learn more &rarr;</a>
             </div>
             <div class="hero-img-box">
