--- a/index.html
+++ b/index.html
@@ -26,10 +26,21 @@
                     The smart 365-days-per-year food subscription that
                     will make you eat healthy again. Tailored to your
                     personal tastes and nutritional needs.
-                    We have delivered 250,000+ meals last year!
+
                 </p>
                 <a href="#" class="btn btn--full margin-right-sm ">Start eating well</a>
                 <a href="#" class="btn btn--outline">Learn more &rarr;</a>
+                <div class="delivered-meals">
+                    <div class="delivered-imgs">
+                        <img src="img/customers/customer-1.jpg" alt="Customer photo" />
+                        <img src="img/customers/customer-2.jpg" alt="Customer photo" />
+                        <img src="img/customers/customer-3.jpg" alt="Customer photo" />
+                        <img src="img/customers/customer-4.jpg" alt="Customer photo" />
+                        <img src="img/customers/customer-5.jpg" alt="Customer photo" />
+                        <img src="img/customers/customer-6.jpg" alt="Customer photo" />
+                    </div>
+                    <p class="delivered-text"><span>250,000+</span> meals delivered last year!</p>
+                </div>
             </div>
             <div class="hero-img-box">
                 <img src="img/hero.png" class="hero-img"
