--- a/index.html
+++ b/index.html
@@ -170,27 +170,65 @@
             <div class="container grid grid--3-cols">
                 <div class="meal">
                     <img src="img/meals/meal-1.jpg" class="meal-img" alt="Japanese Gyozas" />
+                    <div class="meal-content">
+                        <div class="meal-tags">
+                            <span class="tag tag--vegetarian">Vegetarian</span>
+                        </div>
 
-                    <span class="tag">Vegetarian</span>
-                    <p class="meal-title">Japanese Gyozas</p>
-                    <ul class="meal-attributes">
+                        <p class="meal-title">Japanese Gyozas</p>
+                        <ul class="meal-attributes">
 
-                        <li class="meal-attribute">
-                            <ion-icon class="meal-icon" name="flame-outline"></ion-icon>
-                            <span> <strong>650</strong> Calories</span>
-                        </li>
-                        <li class="meal-attribute">
-                            <ion-icon class="meal-icon" name="restaurant-outline"></ion-icon>
-                            <span>NutriScore &reg; <strong>74</strong></span>
-                        </li>
-                        <li class="meal-attribute">
-                            <ion-icon class="meal-icon" name="star-outline"></ion-icon>
-                            <span><strong>4.9</strong> rating (537)</span>
-                        </li>
+                            <li class="meal-attribute">
+                                <ion-icon class="meal-icon" name="flame-outline"></ion-icon>
+                                <span> <strong>650</strong> Calories</span>
+                            </li>
+                            <li class="meal-attribute">
+                                <ion-icon class="meal-icon" name="restaurant-outline"></ion-icon>
+                                <span>NutriScore &reg; <strong>74</strong></span>
+                            </li>
+                            <li class="meal-attribute">
+                                <ion-icon class="meal-icon" name="star-outline"></ion-icon>
+                                <span><strong>4.9</strong> rating (537)</span>
+                            </li>
 
-                    </ul>
+                        </ul>
+                    </div>
                 </div>
-                <div class="meal"></div>
+                <div class="meal">
+                    <img src="img/meals/meal-2.jpg" class="meal-img" alt="Avocado Salad" />
+                    <div class="meal-content">
+                        <div class="meal-tags">
+                            <span class="tag tag--vegan">Vegan</span>
+                            <span class="tag tag--paleo">Paleo</span>
+                        </div>
+
+                        <p class="meal-title">Avocado Salad</p>
+                        <ul class="meal-attributes">
+
+                            <li class="meal-attribute">
+                                <ion-icon class="meal-icon" name="flame-outline"></ion-icon>
+                                <span> <strong>400</strong> Calories</span>
+                            </li>
+                            <li class="meal-attribute">
+                                <ion-icon class="meal-icon" name="restaurant-outline"></ion-icon>
+                                <span>NutriScore &reg; <strong>92</strong></span>
+                            </li>
+                            <li class="meal-attribute">
+                                <ion-icon class="meal-icon" name="star-outline"></ion-icon>
+                                <span><strong>4.8</strong> rating (441)</span>
+                            </li>
+
+                        </ul>
+                    </div>
+                </div>
+
+                - Category: Vegan and Paleo
+                - Calories: 400
+                - NutriScore (Registered): 92
+                - Average rating: 4.8
+                - Number reviews: 441
+
+
                 <div class="list">List of diets</div>
             </div>
         </section>
