--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
             </div>
 
             <div class="container grid grid--2-cols">
-                <div class="pricing-plan">
+                <div class="pricing-plan pricing-plan--starter">
                     <header class="plan-header">
 
                         <p class="plan-name">Starter</p>
@@ -386,12 +386,15 @@
                             <ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>1 meal per day</span>
                         </li>
                         <li class="list-item">
-                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Order times are
-                                between 11am and 9pm</span>
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Order times from 11am
+                                to 9pm</span>
                         </li>
                         <li class="list-item">
                             <ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Delivery is
                                 free</span>
+                        </li>
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="close-outline"></ion-icon>
                         </li>
                     </ul>
                     <div class="plan-sing-up">
@@ -399,7 +402,7 @@
                     </div>
                 </div>
 
-                <div class="pricing-plan">
+                <div class="pricing-plan pricing-plan--complete">
                     <header class="plan-header">
                         <p class="plan-name">Complete</p>
                         <p class="plan-price"><span>$</span>649</p>
@@ -407,10 +410,13 @@
                     </header>
                     <ul class="list">
                         <li class="list-item">
-                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>2 meals per day</span>
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span><strong>2
+                                    meals</strong>
+                                per day</span>
                         </li>
                         <li class="list-item">
-                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Order 24/7</span>
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Order
+                                <strong>24/7</strong></span>
                         </li>
                         <li class="list-item">
                             <ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Delivery is
@@ -428,6 +434,14 @@
                     </div>
                 </div>
             </div>
+
+            <div class="container grid grid--4-cols">
+                <div class="feature">Feature 1</div>
+                <div class="feature">Feature 1</div>
+                <div class="feature">Feature 1</div>
+                <div class="feature">Feature 1</div>
+            </div>
+
         </section>
     </main>
 
