--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                 </h2>
             </div>
 
-            <div class="container grid grid--2-cols">
+            <div class="container grid grid--2-cols margin-bottom-md">
                 <div class="pricing-plan pricing-plan--starter">
                     <header class="plan-header">
 
@@ -434,6 +434,14 @@
                     </div>
                 </div>
             </div>
+
+            <div class="container grid">
+                <aside class="plan-details">
+                    Prices include all applicable taxes. Users can cancel at any time. Both plan include the following:
+                </aside>
+            </div>
+
+
 
             <div class="container grid grid--4-cols">
                 <div class="feature">
