--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                                     <option value="others">Others</option>
                                 </select>
                             </div>
-                            <button class="btn">Sign up now</button>
+                            <button class="btn btn--form">Sign up now</button>
                         </form>
                     </div>
                     <div class="cta-img-box" role="img" aria-label="Woman enjoying food"></div>
